--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
     <head>
         <script id="VertexSource" type="x-shader/x-vertex">
             attribute vec4 vertex;
