--- a/triangle.html
+++ b/triangle.html
@@ -146,13 +146,13 @@
                 }
                 return program;
             }
-		</script>
-		<style>
-		    * { box-sizing: border-box; margin: auto; text-align: center; overflow: hidden; }
-		    body { background: black; }
-		    #canvas { position: fixed; bottom: 0; left: 0; width: 100vw; height: 100vh; }
-		</style>
-    <head>
+	</script>
+	<style>
+	    * { box-sizing: border-box; margin: auto; text-align: center; overflow: hidden; }
+	    body { background: black; }
+	    #canvas { position: fixed; bottom: 0; left: 0; width: 100vw; height: 100vh; }
+	</style>
+    </head>
     <body>
         <canvas id="canvas"></canvas>
     </body>
