--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Cubeception</title>
         <script id="VertexSource" type="x-shader/x-vertex">
             attribute vec4 vertex;
             attribute vec2 uvmap;
@@ -650,8 +651,7 @@
             body { background: black; }
             canvas { position: fixed; bottom: 0; left: 0; width: 100vw; height: 100vh; }
         </style>
-        <title>Cubeception</title>
-    <head>
+    </head>
     <body>
         <canvas id="canvas"></canvas>
     </body>
