--- a/compute.html
+++ b/compute.html
@@ -134,7 +134,7 @@
             table { background: red; margin-top: 10px; padding: 10px; }
             canvas { width: 1px; height: 1px; }
         </style>
-    <head>
+    </head>
     <body>
         <canvas id="canvas" width="1" height="1"></canvas>
         <table id="tableA" cellpadding="5">
