--- a/windowsonedge/index.html
+++ b/windowsonedge/index.html
@@ -562,7 +562,7 @@
             .header { background: #00000000; position: relative; width: 100%; height: 30px; z-index: 9998; }
             .icon { position: absolute; top: 8px; left: 8px; width: 20px; height: 20px; pointer-events: none; user-select: none; }
             .title { position: relative; width: 100%; height: 100%; color: #FFFFFFFF; padding: 10px; font-weight: bold; user-select: none; }
-            .close { position: absolute; top: 10px; right: 5px; width: 30px; height: 30px; color: #FFFFFFFF; }
+            .close { position: absolute; top: 10px; right: 5px; width: 30px; height: 30px; color: #FFFFFFFF; user-select: none; }
             #canvas { position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; }
         </style>
     </head>
