--- a/windowsonedge/index.html
+++ b/windowsonedge/index.html
@@ -555,7 +555,7 @@
         </script>
         <style>
             * { box-sizing: border-box; margin: auto; text-align: center; font-family: sans-serif; overflow: hidden; }
-            body { background-image: url("./Windows11.jpg"); background-size: cover; }
+            body { background: url("./Windows11.jpg") no-repeat center center fixed; background-size: cover; height: 100%; }
             .taskbar { background: #000000AF; position: fixed; bottom: 0; left: 0; width: 100vw; height: 50px; box-shadow: 0 0 15px #000000AF; z-index: 9999; }
             .start { pointer-events: none; user-select: none; }
             .window { background: #000000AF; position: absolute; top: 100px; left: 100px; width: 640px; height: 480px; border-radius: 15px; box-shadow: inset 0 0 15px #555555AF; }
