--- a/windowsonedge/index.html
+++ b/windowsonedge/index.html
@@ -556,13 +556,13 @@
         <style>
             * { box-sizing: border-box; margin: auto; text-align: center; font-family: sans-serif; overflow: hidden; }
             body { background: url("./Windows11.jpg") no-repeat center center fixed; background-size: cover; height: 100%; }
-            .taskbar { background: #000000AF; position: fixed; bottom: 0; left: 0; width: 100vw; height: 50px; box-shadow: 0 0 15px #000000AF; z-index: 9999; }
+            .taskbar { background: rgba(0, 0, 0, 0.69); position: fixed; bottom: 0; left: 0; width: 100vw; height: 50px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.69); z-index: 9999; }
             .start { pointer-events: none; user-select: none; }
-            .window { background: #000000AF; position: absolute; top: 100px; left: 100px; width: 640px; height: 480px; border-radius: 15px; box-shadow: inset 0 0 15px #555555AF; }
-            .header { background: #00000000; position: relative; width: 100%; height: 30px; z-index: 9998; }
+            .window { background: rgba(0, 0, 0, 0.69); position: absolute; top: 100px; left: 100px; width: 640px; height: 480px; border-radius: 15px; box-shadow: inset 0 0 15px rgba(85, 85, 85, 0.69); }
+            .header { background: rgba(0, 0, 0, 0.00); position: relative; width: 100%; height: 30px; z-index: 9998; }
             .icon { position: absolute; top: 8px; left: 8px; width: 20px; height: 20px; pointer-events: none; user-select: none; }
-            .title { position: relative; width: 100%; height: 100%; color: #FFFFFFFF; padding: 10px; font-weight: bold; user-select: none; }
-            .close { position: absolute; top: 10px; right: 5px; width: 30px; height: 30px; color: #FFFFFFFF; user-select: none; }
+            .title { position: relative; width: 100%; height: 100%; color: rgba(255, 255, 255, 1.00); padding: 10px; font-weight: bold; user-select: none; }
+            .close { position: absolute; top: 10px; right: 5px; width: 30px; height: 30px; color: rgba(255, 255, 255, 1.00);; user-select: none; }
             #canvas { position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; }
         </style>
     </head>
