--- a/windowsonedge/index.html
+++ b/windowsonedge/index.html
@@ -51,6 +51,7 @@
             {
                 element = document.getElementsByClassName("window")[0];
                 element.onmousedown = OnDragStart;
+                element.ontouchstart = OnDragStart;
                 setTimeout(() => { setup(); setInterval(() => { loop(); }, 0); }, 0);
             }
 
@@ -115,19 +116,39 @@
             var OnDragStart = function(event)
             {
                 event.preventDefault();
-                pos3 = event.clientX;
-                pos4 = event.clientY;
+                if (event.tye == "touchstart")
+                {
+                    pos3 = event.touches[0].clientX;
+                    pos4 = event.touches[0].clientY;
+                }
+                else
+                {
+                    pos3 = event.clientX;
+                    pos4 = event.clientY;
+                }
                 document.onmousemove = OnDragMove;
                 document.onmouseup = OnDragStop;
+                document.ontouchmove = OnDragMove;
+                document.ontouchend = OnDragStop;
             }
 
             var OnDragMove = function(event)
             {
                 event.preventDefault();
-                pos1 = pos3 - event.clientX;
-                pos2 = pos4 - event.clientY;
-                pos3 = event.clientX;
-                pos4 = event.clientY;
+                if (event.type == "touchmove")
+                {
+                    pos1 = pos3 - event.touches[0].clientX;
+                    pos2 = pos4 - event.touches[0].clientY;
+                    pos3 = event.touches[0].clientX;
+                    pos4 = event.touches[0].clientY;
+                }
+                else
+                {
+                    pos1 = pos3 - event.clientX;
+                    pos2 = pos4 - event.clientY;
+                    pos3 = event.clientX;
+                    pos4 = event.clientY;
+                }
                 element.style.top = (element.offsetTop - pos2) + "px";
                 element.style.left = (element.offsetLeft - pos1) + "px";
             }
@@ -136,6 +157,8 @@
             {
                 document.onmousemove = null;
                 document.onmouseup = null;
+                document.ontouchmove = null;
+                document.ontouchend = null;
             }
 
             var delta = function()
@@ -555,7 +578,7 @@
         </script>
         <style>
             * { box-sizing: border-box; margin: auto; text-align: center; font-family: sans-serif; overflow: hidden; }
-            body { background: url("./Windows11.jpg") no-repeat center center fixed; background-size: cover; height: 100%; }
+            body { background: rgba(0, 0, 0, 1.00) url("./Windows11.jpg") no-repeat center center fixed; background-size: cover; height: 100%; }
             .taskbar { background: rgba(0, 0, 0, 0.69); position: fixed; bottom: 0; left: 0; width: 100vw; height: 50px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.69); z-index: 9999; }
             .start { pointer-events: none; user-select: none; }
             .window { background: rgba(0, 0, 0, 0.69); position: absolute; top: 100px; left: 100px; width: 640px; height: 480px; border-radius: 15px; box-shadow: inset 0 0 15px rgba(85, 85, 85, 0.69); }
