--- a/windowsonedge/index.html
+++ b/windowsonedge/index.html
@@ -116,7 +116,7 @@
             var OnDragStart = function(event)
             {
                 event.preventDefault();
-                if (event.tye == "touchstart")
+                if (event.type == "touchstart")
                 {
                     pos3 = event.touches[0].clientX;
                     pos4 = event.touches[0].clientY;
