--- a/phonelitHI.html
+++ b/phonelitHI.html
@@ -11,6 +11,9 @@
         var slider_H = null;
         var slider_I = null;
 
+        var onethird = (1.0 / 3.0);
+        var twothirds = (2.0 / 3.0);
+
         window.onload = function()
         {
             slider_H = document.getElementById("slider_H");
@@ -28,12 +31,12 @@
         var phonelit = function()
         {
             var rgb = HI2RGB(H, I);
-            var hue = HI2RGB(H, 50);
+            var hue = HI2RGB(H, 0.25);
             document.title = rgb.R + ", " + rgb.G + ", " + rgb.B;
             document.body.style.backgroundColor = "rgba(" + rgb.R + ", " + rgb.G + ", " + rgb.B + ", 1.0)";
 
             slider_H.style.background = "linear-gradient(to right, red, orange, yellow, lime, green, cyan, blue, indigo, violet, magenta, red)";
-            slider_I.style.background = "linear-gradient(to right, black, rgba(" + hue.R + ", " + hue.G + ", " + hue.B + ", 1.0), white)";
+            slider_I.style.background = "linear-gradient(to right, black, rgba(" + hue.R + ", " + hue.G + ", " + hue.B + ", 1.0), white, grey, black)";
 
             slider_H.value = H;
             slider_I.value = I;
@@ -45,25 +48,38 @@
         var HI2RGB = function(H, I)
         {
             var data = {};
+
             H = parseFloat(H);
-            I = (I / 50.0);
-            var S = Math.min(Math.max((I - 1.0), 0.0), 1.0);
-            var L = Math.min(Math.max((I / 2.0), 0.0), 1.0);
-            var HR = 180.0 + (H);
-            var HG = 180.0 + (H - 120.0);
-            var HB = 180.0 + (H - 240.0);
-            if (HR >= 360.0) { HR -= 360.0; } else if (HR < 0) { HR += 360.0; }
-            if (HG >= 360.0) { HG -= 360.0; } else if (HG < 0) { HG += 360.0; }
-            if (HB >= 360.0) { HB -= 360.0; } else if (HB < 0) { HB += 360.0; }
-            data.R = S + Math.min(Math.max(2.0 * (1.0 - (Math.abs(180.0 - HR) / 120.0)), 0.0), 1.0);
-            data.G = S + Math.min(Math.max(2.0 * (1.0 - (Math.abs(180.0 - HG) / 120.0)), 0.0), 1.0);
-            data.B = S + Math.min(Math.max(2.0 * (1.0 - (Math.abs(180.0 - HB) / 120.0)), 0.0), 1.0);
-            data.R = L * Math.min(Math.max(data.R, 0.0), 1.0);
-            data.G = L * Math.min(Math.max(data.G, 0.0), 1.0);
-            data.B = L * Math.min(Math.max(data.B, 0.0), 1.0);
+            I = 4.0 * I;
+            D = Math.min(Math.max(1.0 - (I - 3.0), 0.0), 1.0);
+
+            var S = Math.min(Math.max(I - 1.0, 0.0), 1.0);
+            var L = Math.min(Math.max(I, 0.0), 1.0);
+
+            var HR = 0.5 + (H);
+            var HG = 0.5 + (H - onethird);
+            var HB = 0.5 + (H - twothirds);
+
+            if (HR >= 1.0) { HR -= 1.0; } else if (HR < 0.0) { HR += 0.0; }
+            if (HG >= 1.0) { HG -= 1.0; } else if (HG < 0.0) { HG += 0.0; }
+            if (HB >= 1.0) { HB -= 1.0; } else if (HB < 0.0) { HB += 0.0; }
+
+            data.R = Math.min(Math.max(2.0 * (1.0 - (3.0 * Math.abs(0.5 - HR))), 0.0), 1.0);
+            data.G = Math.min(Math.max(2.0 * (1.0 - (3.0 * Math.abs(0.5 - HG))), 0.0), 1.0);
+            data.B = Math.min(Math.max(2.0 * (1.0 - (3.0 * Math.abs(0.5 - HB))), 0.0), 1.0);
+
+            var SR = S * (1.0 - data.R);
+            var SG = S * (1.0 - data.G);
+            var SB = S * (1.0 - data.B);
+
+            data.R = D * L * (SR + data.R);
+            data.G = D * L * (SG + data.G);
+            data.B = D * L * (SB + data.B);
+
             data.R = parseInt(255.0 * data.R);
             data.G = parseInt(255.0 * data.G);
             data.B = parseInt(255.0 * data.B);
+
             return data;
         }
     </script>
@@ -81,7 +97,7 @@
     </style>
   </head>
   <body>
-    <input class="slider" id="slider_H" type="range" min="0" max="360" step="0.01" value="0"></input>
-    <input class="slider" id="slider_I" type="range" min="0" max="100" step="0.01" value="0"></input>
+    <input class="slider" id="slider_H" type="range" min="0.00" max="1.00" step="0.0001" value="0.00"></input>
+    <input class="slider" id="slider_I" type="range" min="0.00" max="1.00" step="0.0001" value="0.00"></input>
   </body>
 </html>
