--- a/patchbay.html
+++ b/patchbay.html
@@ -34,7 +34,7 @@ var test=(event)=>
 }
 
 var selected = null;
-var link=(x, y)=> //LMB, RMB cancel
+var link=(x, y)=>
 {
     if (!selected)
     {
@@ -51,7 +51,7 @@ var link=(x, y)=> //LMB, RMB cancel
     draw();
 }
 var last = null;
-var tear=(x, y)=> //RMB, LMB undo???
+var tear=(x, y)=>
 {
     if (!selected)
     {
@@ -61,7 +61,21 @@ var tear=(x, y)=> //RMB, LMB undo???
     {
         if ((selected[0] != x) || (selected[1] != y))
         {
-            patch.links.pop([selected, [x, y]]);
+            //patch.links.pop([selected, [x, y]]);
+            for (var i = 0; i < patch.links.length; ++i)
+            {
+                if (((patch.links[i][0][0] == x)
+                &&   (patch.links[i][0][1] == y)
+                &&   (patch.links[i][1][0] == selected[0])
+                &&   (patch.links[i][1][1] == selected[1]))
+                ||  ((patch.links[i][0][0] == selected[0])
+                &&   (patch.links[i][0][1] == selected[1])
+                &&   (patch.links[i][1][0] == x)
+                &&   (patch.links[i][1][1] == y)))
+                {
+                    patch.links.splice(i, 1);
+                }
+            }
         }
         selected = null;
     }
@@ -110,10 +124,21 @@ var draw=()=>
         }
         catch (error) { console.log(error); }
     }
+
+    if (selected)
+    {
+        try
+        {
+            cx = parseInt((selected[0] - 1) * ow) + qw;
+            cy = parseInt((selected[1] - 1) * oh) + qh;
+            ctx.fillRect(cx, cy, hw, hh);
+        }
+        catch (error) { console.log(error); }
+    }
 }
     </script>
     <style>
-      * { background: #101010; }
+      * { background: #101010FF; }
       canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
   </head>
