Tested iomap_vulkan_mod

--- a/iomap_vulkan/iomap_vulkan_mod.html
+++ b/iomap_vulkan/iomap_vulkan_mod.html
@@ -40,14 +40,14 @@ div_img = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFMAAAAcCAYAAAAdvIO5AAA
 stage_list = 
 [
     "VK_SHADER_STAGE_VERTEX_BIT", ////////
-//  "VK_SHADER_STAGE_FIT_BIT",
+    "VK_SHADER_STAGE_FIT_BIT",
     "VK_SHADER_STAGE_TESSELLATION_CONTROL_BIT", ////
-//  "VK_SHADER_STAGE_TESSELLATION_PRIMITIVE_BIT", //
+    "VK_SHADER_STAGE_TESSELLATION_PRIMITIVE_BIT", //
     "VK_SHADER_STAGE_TESSELLATION_EVALUATION_BIT", ////
     "VK_SHADER_STAGE_GEOMETRY_BIT", ////
     "VK_SHADER_STAGE_FRAGMENT_BIT", ////////
     "VK_SHADER_STAGE_COMPUTE_BIT", ////
-//  "VK_SHADER_STAGE_TENSOR_BIT", //
+    "VK_SHADER_STAGE_TENSOR_BIT", //
     "VK_SHADER_STAGE_RAYGEN_BIT_KHR", //
     "VK_SHADER_STAGE_ANY_HIT_BIT_KHR",
     "VK_SHADER_STAGE_CLOSEST_HIT_BIT_KHR",
@@ -56,9 +56,9 @@ stage_list =
     "VK_SHADER_STAGE_CALLABLE_BIT_KHR",
     "VK_SHADER_STAGE_TASK_BIT_EXT",
     "VK_SHADER_STAGE_MESH_BIT_EXT", //<<==!!!
-//  "VK_SHADER_STAGE_CLIPPING_BIT", //<<==!!!
-//  "VK_SHADER_STAGE_COLLIDER_BIT", //<<==!!!
-//  "VK_SHADER_STAGE_SELECTION_BOUNDS_BIT_EXT", //<<==!!!
+    "VK_SHADER_STAGE_CLIPPING_BIT", //<<==!!!
+    "VK_SHADER_STAGE_COLLIDER_BIT", //<<==!!!
+    "VK_SHADER_STAGE_SELECTION_BOUNDS_BIT_EXT", //<<==!!!
     "VK_SHADER_STAGE_SUBPASS_SHADING_BIT_HUAWEI",
     "VK_SHADER_STAGE_CLUSTER_SHADING_BIT_HUAWEI",
     "VK_SHADER_STAGE_RAYGEN_BIT_NV",
@@ -69,8 +69,27 @@ stage_list =
     "VK_SHADER_STAGE_CALLABLE_BIT_NV",
     "VK_SHADER_STAGE_TASK_BIT_NV",
     "VK_SHADER_STAGE_MESH_BIT_NV",
-//  "VK_SHADER_STAGE_ALL_GRAPHICS",
-//  "VK_SHADER_STAGE_ALL",
+    "VK_UNITY_SHADER_STAGE_VERTEX_BIT",
+    "VK_UNITY_SHADER_STAGE_FRAGMENT_BIT",
+    "VK_UNITY_SHADER_STAGE_GEOMETRY_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_COMPUTE_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_HULL_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_DOMAIN_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_TESSELLATION_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_SURFACE_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_SURFACE_VERTEX_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_SURFACE_LIGHTING_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_SURFACE_ATTENUATION_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_SURFACE_TESSELLATION_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_RAYCAST_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_NAVMESH_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_COLLIDER_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_LIGHTNG_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_TASK_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_DISPATCH_BIT_EXT",
+    "VK_UNITY_SHADER_STAGE_MESH_BIT_EXT",
+    "VK_SHADER_STAGE_ALL_GRAPHICS",
+    "VK_SHADER_STAGE_ALL",
 ];
 
 drive_list =
